--- a/DynamicWeb1/userdocs/RaspForDilogy.html
+++ b/DynamicWeb1/userdocs/RaspForDilogy.html
@@ -349,6 +349,8 @@ a (tutti)
 u (utente proprietario)
 g (gruppo)
 o (altri utenti)
+
+rm -rf dirname 	<kc>//rimuove tutti i files in una dir 'recursively'</kc>
 </pre>
 </li>
 
