--- a/DynamicWeb1/WebContent/index.html
+++ b/DynamicWeb1/WebContent/index.html
@@ -35,8 +35,9 @@ and open the template in the editor.
     </head>
     <body>
         <h2>Starting</h2>
-    <div> click <a href="SnoopServlet">Click to Invoke a SnoopServlet</a></div>  
+    <div> click <a href="FirstServlet">Click to Invoke a FirstServlet</a></div>  
 	<div> click <a href="firstJsp.jsp">Click to Invoke firstJsp.jsp</a></div>  
+	<div> click <a href="authorpage.jsp">Click to Invoke authorpage.jsp</a></div>  
     <br/>
     <br/>
     
